--- a/ScoreZone.Web/appsettings.json
+++ b/ScoreZone.Web/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=scoreZone;Trusted_Connection=True;"
+  }
 }
