Ajuste de tiempo

--- a/ScoreZone.Web/appsettings.json
+++ b/ScoreZone.Web/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=scoreZone;Trusted_Connection=True;"
+    "DefaultConnection": "Server=.;Database=scorezone;Trusted_Connection=True;"
   }
 }
